// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders all supporting elements to make auto-grow work 1`] = `
.emotion-0 {
  display: grid;
}

.emotion-1 {
  position: relative;
  grid-area: 1/1/2/2;
}

.emotion-1::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-2 {
  display: block;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 8px 12px;
  color: #05192D;
  background-color: #FFFFFF;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  color: #05192D;
  background-color: #FFFFFF;
}

.emotion-2:disabled {
  cursor: default;
  opacity: 0.6;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2::placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-3 {
  display: block;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 8px 12px;
  color: #05192D;
  background-color: #FFFFFF;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  grid-area: 1/1/2/2;
  visibility: hidden;
  white-space: pre-wrap;
}

.emotion-3:disabled {
  cursor: default;
  opacity: 0.6;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <textarea
      aria-invalid="false"
      class="emotion-2"
    >
      Welcome
    </textarea>
  </div>
  <div
    aria-hidden="true"
    class="emotion-3"
  >
    Welcome 
  </div>
</div>
`;

exports[`TextArea renders snapshot 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: block;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 8px 12px;
  color: #05192D;
  background-color: #FFFFFF;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  color: #05192D;
  background-color: #FFFFFF;
}

.emotion-1:disabled {
  cursor: default;
  opacity: 0.6;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <textarea
    aria-invalid="false"
    class="emotion-1"
    placeholder="Leave a comment here"
  />
</div>
`;

exports[`TextArea renders snapshot of disabled 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: block;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 8px 12px;
  color: #05192D;
  background-color: #FFFFFF;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  color: #05192D;
  background-color: #FFFFFF;
}

.emotion-1:disabled {
  cursor: default;
  opacity: 0.6;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <textarea
    aria-invalid="false"
    class="emotion-1"
    disabled=""
  />
</div>
`;

exports[`TextArea renders snapshot of inverted 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: block;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 8px 12px;
  color: #05192D;
  background-color: #FFFFFF;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  color: #FFFFFF;
  background-color: #213147;
}

.emotion-1:disabled {
  cursor: default;
  opacity: 0.6;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #9BA3AB;
}

<div
  class="emotion-0"
>
  <textarea
    aria-invalid="false"
    class="emotion-1"
  />
</div>
`;

exports[`TextArea renders snapshot of required with error 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: block;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 8px 12px;
  color: #05192D;
  background-color: #FFFFFF;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  color: #05192D;
  background-color: #FFFFFF;
  border-color: #DD3400;
  box-shadow: 0 0 0 1px #DD3400;
}

.emotion-1:disabled {
  cursor: default;
  opacity: 0.6;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <textarea
    aria-invalid="true"
    class="emotion-1"
  />
</div>
`;
